Fixed css on small devices

--- a/less/agency.less
+++ b/less/agency.less
@@ -191,15 +191,17 @@ header {
             font-size: 50px;
             line-height: 50px;
             margin-bottom: 25px;
-
             min-height: 100px;
-           //width: 200px;
-
             background-image: url("../img/simonandText.png");
             background-repeat: no-repeat;
             background-size: contain;
-            background-position: center; 
-           
+            background-position: center;
+        }
+    }
+
+    @media(max-width:1200px) {
+        .intro-text {
+            padding-top: 20%;
         }
     }
 
